# Snake-Game-C-language-

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_with_mingw.bat  download_sdl.bat  install_mingw.bat  install_mingw_simple.bat  run.bat  setup_complete.bat  setup_environment.bat
assets/fonts/: README.txt
assets/sounds/: README.txt
include/: food.h  game.h  grid.h  snake.h  sound.h  text.h
src/: food.cpp  game.cpp  grid.cpp  main.cpp  snake.cpp  sound.cpp  text.cpp
